ticketing/infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  labels:
    name: ingress-srv
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: www.employeebus.com
    http:
      paths:
      - path: "/api/payments/?(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: payments-srv
            port: 
              number: 3000
      - path: "/api/users/?(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-srv
            port: 
              number: 3000
      - path: "/api/tickets/?(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: tickets-srv
            port: 
              number: 3000
      - path: "/api/orders/?(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: orders-srv
            port: 
              number: 3000
      - path: "/?(.*)"
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-srv
            port: 
              number: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.employeebus.com'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
